--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -3,17 +3,17 @@
  * and scoped locally.
  */
 
+ .container {
+  height: 100%;
+  display: flex;
+  flex-direction: row;
+}
 .heroBanner {
   padding: 4rem 0;
   text-align: center;
-  position: relative;
+  /* position: relative; */
   overflow: hidden;
-}
-
-@media screen and (max-width: 996px) {
-  .heroBanner {
-    padding: 2rem;
-  }
+  height: 100vh;
 }
 
 .buttons {
@@ -24,15 +24,83 @@
 
 .appInfo {
   float: left;
-  width: 50%;
+  width: 55%;
   height: 100%;
-  position:relative;
-  top: 50%;
-  transform: translateY(60%);
+  padding-left: 10%;
+  padding-right: 5%;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
 .appImg {
   float: left;
-  width: 50%;
   height: 100%;
+  padding-top: 60px;
+  display: flex;
+  max-width: 620px;
+  flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+@media screen and (max-width: 1200px) {
+  .appImg {
+    /* width: 100%; */
+    max-width: 520px;
+  }
+}
+@media screen and (max-width: 996px) {
+  .heroBanner {
+    padding: 2rem;
+    height: 10%;
+  }
+  .container {
+    flex-direction: column;
+  }
+
+  .appInfo {
+    float: left;
+    width: 100%;
+    height: 90vh;
+    padding-left: 10%;
+    padding-right: 10%;
+    font-size: 90px;
+  }
+  .appImg {
+    /* width: 100%; */
+    max-width: 100%;
+    padding-left: 10%;
+    padding-right: 10%;
+  }
+}
+
+@media screen and (max-width: 560px) {
+  .heroBanner {
+    padding: 2rem;
+    /* height: 10%; */
+  }
+  .heroTitle {
+    font-size: 30px !important;
+  }
+  .heroSubtitle {
+    font-size: 18px !important;
+  }
+  .appInfo {
+    height: 60vh;
+  }
+  .appImg {
+    padding-left: 5%;
+    padding-right: 5%;
+    margin-top: -110px;
+    margin-bottom: 10px;
+    /* height: 80vh; */
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .appImg {
+    margin-top: -10px;
+  }
 }
